--- a/res/layout/layout_mapview.xml
+++ b/res/layout/layout_mapview.xml
@@ -3,11 +3,11 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-	<ImageView
+<!-- 	<ImageView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/map_up" />
- 
+        android:src="@drawable/map_up" /> -->
+     
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -17,6 +17,36 @@
         android:id="@+id/myimage"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/map_up" /> 
+        android:src="@drawable/map_up" />
+
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" >
+
+		<Button
+		    android:id="@+id/button1"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="1" />
+
+		<Button
+		    android:id="@+id/button2"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="2" />
+
+		<Button
+		    android:id="@+id/button3"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="3" />
+
+		<Button
+		    android:id="@+id/button4"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="4" />
+
+	</LinearLayout>
 
 </LinearLayout>
